--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,10 @@ audio {
 .game-hud {
     display: flex;
     justify-content: space-between;
+    flex-direction: row-reverse;
+}
+h2{
+    margin-left: 6rem;
 }
 
 .game-currency {
@@ -141,7 +145,7 @@ audio {
     width: var(--space-4xl-5xl);
     height: var(--space-4xl-5xl);
     font-size: var(--step-2);
-    background: url('../img/brett-meliti-RgkYMfFopIA-unsplash-removebg-preview.png');
+    background: url('../img/Button.png');
     background-size: cover;
     background-position: center;
     border: 2px solid transparent;
@@ -149,6 +153,7 @@ audio {
     text-transform: uppercase;
     font-weight: 700;
     cursor: pointer;
+    margin: 2rem;
 }
 
 #game-button:hover {
@@ -203,6 +208,7 @@ audio {
     border: 1px solid var(--color-dark-transparent);
     margin: var(--space-xs-s) 0;
     padding: var(--space-s-m) var(--space-xs-s);
+    margin-left: 6rem;
 }
 
 .card:hover {
